fixed overflow issue in myrecipes

--- a/src/style/myrecipes.scss
+++ b/src/style/myrecipes.scss
@@ -29,6 +29,7 @@
         margin-bottom: 20px;
         border: 12px solid #808080;
         border-radius: 1em;
+        overflow: auto;
 
         .recipe-title {
             border: 5px solid transparent;
